--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mailchimp/mailchimp_marketing": "^3.0.75",
     "@mantine/core": "^4.2.9",
     "@mantine/dates": "^4.2.9",
     "@mantine/dropzone": "^4.2.9",
+    "@mantine/form": "^4.2.9",
     "@mantine/hooks": "^4.2.9",
     "@mantine/modals": "^4.2.9",
     "@mantine/next": "^4.2.9",
@@ -21,7 +23,8 @@
     "dayjs": "^1.11.3",
     "next": "12.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tabler-icons-react": "^1.49.0"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
