--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-share": "^4.4.0",
     "tabler-icons-react": "^1.49.0"
   },
   "devDependencies": {
