--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.8",
     "@mailchimp/mailchimp_marketing": "^3.0.75",
     "@mantine/core": "^4.2.9",
     "@mantine/dates": "^4.2.9",
@@ -21,6 +22,7 @@
     "@mantine/rte": "^4.2.9",
     "@mantine/spotlight": "^4.2.9",
     "dayjs": "^1.11.3",
+    "graphql": "^16.5.0",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
