--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mantine/spotlight": "^4.2.9",
     "dayjs": "^1.11.3",
     "graphql": "^16.5.0",
+    "moment": "^2.29.3",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
