--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "graphql": "^16.5.0",
     "moment": "^2.29.3",
     "next": "12.1.6",
+    "next-pwa": "^5.5.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-share": "^4.4.0",
